--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "env": "^0.0.2",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "fs": "0.0.1-security",
+    "input": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.7",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.18",
+    "nunjucks": "^3.2.3",
     "path": "^0.12.7",
+    "telegram": "^2.9.2",
     "twitter": "^1.7.1"
   },
   "devDependencies": {},
